kubernetes-ha-binary

--- a/global-config.properties
+++ b/global-config.properties
@@ -4,9 +4,9 @@ MASTER_1_IP=172.18.41.19
 MASTER_2_IP=172.18.41.20
 
 #3个master节点的hostname
-MASTER_0_HOSTNAME=m7-a2-15-41.18-jiagou.cn
-MASTER_1_HOSTNAME=m7-a2-15-41.19-jiagou.cn
-MASTER_2_HOSTNAME=m7-a2-15-41.20-jiagou.cn
+MASTER_0_HOSTNAME=mm1
+MASTER_1_HOSTNAME=mm2
+MASTER_2_HOSTNAME=mm3
 
 #api-server的高可用虚拟ip
 MASTER_VIP=172.18.41.14
